<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/stxnext_green"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/profile_image_view"
            android:layout_width="wrap_content"
            android:layout_height="140dp"
            android:layout_margin="18dp"
            android:alpha="0.5"
            android:src="@drawable/mr_superhero_profile"/>

        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="110dp"
                    android:orientation="vertical">

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="18dp"
                        card_view:cardCornerRadius="4dp">

                        <TextView
                            android:id="@+id/logout_button"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/logout"
                            android:textAllCaps="true"
                            android:gravity="center"
                            android:textColor="@android:color/white"
                            android:clickable="true"
                            android:padding="16dp"
                            android:background="@drawable/selector_default_button"
                            android:textSize="21sp"
                            android:textStyle="bold"/>

                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="18dp"
                        android:layout_marginRight="18dp"
                        card_view:cardCornerRadius="4dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="12dp"
                                android:layout_marginRight="12dp"
                                android:layout_marginTop="12dp"
                                android:text="@string/credits"
                                android:textColor="@color/stxnext_green"
                                android:textSize="21sp"
                                android:textStyle="bold"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="12dp"
                                android:layout_marginRight="12dp"
                                android:layout_marginTop="12dp"
                                android:text="@string/development_team"
                                android:textColor="@color/stxnext_green"
                                android:textSize="16sp"
                                android:textStyle="bold"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="38dp"
                                android:textColor="@android:color/black"
                                android:text="Mariusz Krok"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="38dp"
                                android:textColor="@android:color/black"
                                android:text="Łukasz Ciupa"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="38dp"
                                android:textColor="@android:color/black"
                                android:text="Tomasz Konieczny"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="12dp"
                                android:layout_marginRight="12dp"
                                android:layout_marginTop="12dp"
                                android:text="@string/design"
                                android:textColor="@color/stxnext_green"
                                android:textSize="16sp"
                                android:textStyle="bold"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="38dp"
                                android:textColor="@android:color/black"
                                android:layout_marginBottom="18dp"
                                android:text="Tomasz Konieczny"/>

                        </LinearLayout>

                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="18dp"
                        card_view:cardCornerRadius="4dp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="12dp"
                                android:layout_marginTop="12dp"
                                android:gravity="center"
                                android:textColor="@color/stxnext_green_dark"
                                android:text="STX Next Mobile Team 2015"/>


                    </android.support.v7.widget.CardView>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>
    </FrameLayout>


</LinearLayout>