<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/stxnext_green"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                >

                <Spinner
                    android:id="@+id/projects_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">

                    <android.support.design.widget.TextInputLayout
                        android:layout_marginLeft="5dp"
                        android:minWidth="150dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                            <android.support.v7.widget.AppCompatEditText
                                android:id="@+id/activity_add_hours_ticket_id"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:maxLines="5"
                                android:text="0"
                                android:textColorHint="@color/stxnext_green"
                                android:hint="@string/add_hours_ticket_id"
                                android:textStyle="bold"
                                android:paddingTop="0dp"
                                android:alpha="0.5"
                                android:textSize="25sp"
                                android:digits="0123456789"
                                android:inputType="numberDecimal"
                                android:textColor="@android:color/black" />
                        </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_marginLeft="5dp"
                        android:minWidth="150dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/activity_add_hours_time_value"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="5"
                            android:text="0.00"
                            android:textColorHint="@color/stxnext_green"
                            android:hint="@string/add_hours_time_value"
                            android:textStyle="bold"
                            android:paddingTop="0dp"
                            android:alpha="0.5"
                            android:textSize="25sp"
                            android:digits="0123456789."
                            android:inputType="numberDecimal"
                            android:textColor="@android:color/black" />
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_marginLeft="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/activity_add_hours_description"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="7"
                        android:minLines="7"
                        android:text=""
                        android:textColorHint="@color/stxnext_green"
                        android:textColorHighlight="@color/stxnext_green"
                        android:hint="@string/add_hours_description"
                        android:textStyle="bold"
                        android:paddingTop="0dp"
                        android:alpha="0.5"
                        android:textSize="25sp"
                        android:textColor="@android:color/black" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

        </FrameLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/progress_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        android:background="@color/white_alpha">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>


    </FrameLayout>

</FrameLayout>
