<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/worked_hours_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="12dp"
    android:layout_marginRight="12dp"
    android:layout_marginTop="6dp"
    android:layout_marginBottom="6dp"
    card_view:cardElevation="4dp"
    card_view:cardCornerRadius="4dp"
    style="@style/CardView.Light">

    <LinearLayout
        android:id="@+id/item_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/card_selector"
        android:clickable="true"
        android:focusable="true">

        <com.stxnext.intranet2.view.RoundedImageView
            android:id="@+id/user_avatar"
            xmlns:round="http://schemas.android.com/apk/res-auto"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/avatar_placeholder"
            round:borderColor="@color/gray_light"
            round:borderSize="@dimen/default_rounded_image_border"/>


        <LinearLayout
            android:id="@+id/user_info_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/user_name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/stxnext_green"
                android:textSize="19sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/user_desc_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Opis"
                android:gravity="center_horizontal"
                android:textColor="@color/gray_dark"
                android:layout_marginTop="-4dp"
                android:textSize="12sp"
                android:fontFamily="sans-serif-thin"
                android:textStyle="italic|bold" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|bottom"
        android:gravity="center_vertical"
        android:background="@drawable/card_section"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tomorrow_marker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:paddingRight="6dp"
            android:paddingLeft="6dp"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/stxnext_green"
            android:textSize="11sp"
            android:text="@string/tomorrow"
            android:textAllCaps="true"
            android:visibility="gone"
            android:background="@drawable/left_border"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:paddingRight="6dp"
            android:paddingLeft="6dp"
            android:fontFamily="sans-serif-condensed"
            android:textSize="11dp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:background="@color/stxnext_green"
            android:text="@string/from"/>

        <TextView
            android:id="@+id/from_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/gray_dark"
            android:textSize="13sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:paddingRight="6dp"
            android:paddingLeft="6dp"
            android:fontFamily="sans-serif-condensed"
            android:textSize="11sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:background="@color/stxnext_green"
            android:text="@string/to"/>

        <TextView
            android:id="@+id/to_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/gray_dark"
            android:textSize="13sp"
            android:textStyle="bold"/>

    </LinearLayout>

</android.support.v7.widget.CardView>


