<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/stxnext_green"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/wtf_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:alpha="0"
                android:layout_marginBottom="36dp"
                android:scaleType="fitEnd"
                android:src="@drawable/wtf"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:background="@color/stxnext_green"
                    android:layout_height="130dp">

                    <FrameLayout
                        android:id="@+id/hour_label_background"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/stxnext_green_darkest"
                        android:alpha="0"/>

                    <TextView
                        android:id="@+id/hour_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="09:00"
                        android:textSize="58sp"/>

                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_gravity="center">

                    <android.support.v7.widget.CardView
                        android:id="@+id/input_layout_lateness_reason"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="3dp"
                        android:visibility="invisible"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp">

                        <!-- Empty layout to prevent autofocus -->
                        <LinearLayout
                            android:id="@+id/autotext"
                            android:orientation="vertical"
                            android:focusable="true" android:focusableInTouchMode="true"
                            android:layout_width="0px" android:layout_height="0px"/>

                        <android.support.design.widget.TextInputLayout
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_marginTop="7dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <android.support.v7.widget.AppCompatEditText
                                android:id="@+id/lateness_reason"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:maxLines="5"
                                android:text="@string/i_will_be_late"
                                android:textColorHint="@color/stxnext_green"
                                android:hint="@string/lateness_reason"
                                android:textStyle="bold"
                                android:paddingTop="0dp"
                                android:alpha="0.5"
                                android:textSize="25sp"
                                android:textColor="@android:color/black"
                                android:nextFocusUp="@id/autotext"
                                android:nextFocusLeft="@id/autotext" />
                        </android.support.design.widget.TextInputLayout>

                    </android.support.v7.widget.CardView>

                    <LinearLayout
                        android:id="@+id/tip_container"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            android:layout_gravity="center"
                            android:textColor="@android:color/black"
                            android:fontFamily="sans-serif-thin"
                            android:textSize="24sp"
                            android:text="@string/move_finger"/>

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="140dp"
                            android:layout_marginLeft="32dp"
                            android:layout_marginRight="32dp"
                            android:layout_gravity="center"
                            android:scaleType="centerCrop"
                            android:src="@drawable/arrow_right"/>

                    </LinearLayout>

                    <SeekBar
                        android:id="@+id/time_seek_bar"
                        android:layout_width="match_parent"
                        android:layout_height="6dp"
                        android:max="120"
                        android:padding="0dp"
                        style="@style/LateSeekBar"
                        android:progress="0"/>

                    <SeekBar
                        android:id="@+id/time_seek_bar_stub"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:max="120"
                        android:padding="0dp"
                        android:layout_marginRight="32dp"
                        android:paddingLeft="32dp"
                        android:progressDrawable="@drawable/seekbar_progress_stub"
                        android:thumb="@null"
                        android:progress="0"/>

                </FrameLayout>

                <Button
                    android:id="@+id/submit_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="21sp"
                    android:textStyle="bold"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:layout_margin="3dp"
                    android:elevation="3dp"
                    android:background="@drawable/selector_default_button"
                    android:alpha="0"
                    android:text="@string/submit"/>

            </LinearLayout>

        </FrameLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/progress_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        android:background="@color/white_alpha">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>


    </FrameLayout>

</FrameLayout>
